added swagger definition for new posts fields
